--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -1,2 +1,3 @@
-<p>{{ id }}</p>
-<p>{{ text }}</p>
+<div class="flex justify-content-center">
+  <p-button [routerLink]="['/upload/add-work']">add-work</p-button>
+</div>
