feat: add internationalization and EN translation

--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -1,3 +1,5 @@
 <div class="flex justify-content-center">
-  <p-button [routerLink]="['/upload/add-work']">add-work</p-button>
+  <p-button [routerLink]="['/upload/add-work']">{{
+    "ADD_WORK_BTN" | translate
+  }}</p-button>
 </div>
