--- a/src/app/upload/add-work/add-work.component.html
+++ b/src/app/upload/add-work/add-work.component.html
@@ -7,7 +7,7 @@
 <div class="flex justify-content-center">
   <p-fileUpload
     #fileUploadBtn
-    chooseLabel="Select text file"
+    chooseLabel="{{ 'SELECT_FILE_BTN' | translate }}"
     mode="basic"
     [customUpload]="true"
     [auto]="true"
