refactor: rename UploadModule and AddWorkComponent

--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -1,5 +1,3 @@
 <div class="flex justify-content-center">
-  <p-button [routerLink]="['/upload/add-work']">{{
-    "ADD_WORK_BTN" | translate
-  }}</p-button>
+  <p-button [routerLink]="['/admin']">{{ "ADMIN_NAV" | translate }}</p-button>
 </div>
