--- a/src/app/read/read/read.component.html
+++ b/src/app/read/read/read.component.html
@@ -8,7 +8,7 @@
 
   <div class="col-8">
     <ng-container *ngIf="paragraphs">
-      <app-normal-mode></app-normal-mode>
+      <app-normal-mode [paragraphs]="paragraphs"></app-normal-mode>
     </ng-container>
   </div>
 </div>
