--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<p-messages></p-messages>
+<div class="mb-2">
+  <p-tabMenu [model]="items">
+    <ng-template pTemplate="item" let-item>
+      <i [ngClass]="item.icon"></i>
+      <div class="mt-2 ml-1">
+        {{ item.label | translate }}
+      </div>
+    </ng-template>
+  </p-tabMenu>
+</div>
+
+<div class="mb-2">
+  <p-messages></p-messages>
+</div>
 
 <router-outlet></router-outlet>
