--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -1,8 +1,1 @@
-<p-tabMenu [model]="items">
-  <ng-template pTemplate="item" let-item>
-    <i [ngClass]="item.icon"></i>
-    <div class="mt-2 ml-1">
-      {{ item.label | translate }}
-    </div>
-  </ng-template>
-</p-tabMenu>
+<p>startpage works!</p>
