feat: add pipe to format page number info

--- a/src/app/read/normal-mode/normal-mode.component.html
+++ b/src/app/read/normal-mode/normal-mode.component.html
@@ -7,6 +7,6 @@
       hyphens: auto;
     "
     lang="de-de"
-    [innerHTML]="paragraph.text"
+    [innerHTML]="paragraph.text | pagenumberNormalMode"
   ></p>
 </ng-container>
