--- a/src/styles.less
+++ b/src/styles.less
@@ -3,7 +3,7 @@
 @import "primeflex/primeflex.css";
 @import "primeicons/primeicons.css";
 
-p {
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
