feat: add custom styles

--- a/src/styles.less
+++ b/src/styles.less
@@ -7,3 +7,38 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+.ks-page-no-normal {
+  font-size: 0.75rem;
+  color: var(--surface-500);
+}
+
+.ks-h {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.ks-i {
+  font-style: italic;
+}
+
+.ks-b {
+  font-weight: 700;
+}
+
+.ks-u {
+  text-decoration-line: underline;
+}
+
+.ks-st {
+  text-decoration-line: line-through;
+}
+
+.ks-er1 {
+  color: var(--primary-color);
+}
+
+.ks-er2 {
+  color: var(--primary-color);
+  font-weight: 700;
+}
