refactor: rename work-menu -> works-menu

--- a/src/app/read/read/read.component.html
+++ b/src/app/read/read/read.component.html
@@ -1,9 +1,9 @@
 <div class="grid">
   <div class="col-4">
-    <app-work-menu
+    <app-works-menu
       [works]="works"
       (onSelection)="loadWork($event)"
-    ></app-work-menu>
+    ></app-works-menu>
   </div>
 
   <div class="col-4">
