feat: implement work selection in search module

--- a/src/app/search/search/search.component.html
+++ b/src/app/search/search/search.component.html
@@ -5,6 +5,7 @@
       type="text"
       class="mb-2 w-full"
       placeholder="{{ 'SEARCH.INPUT_PLACEHOLDER' | translate }}"
+      [(ngModel)]="searchTerms"
     />
 
     <div class="mb-2">
