--- a/src/app/search/works-menu/works-menu.component.html
+++ b/src/app/search/works-menu/works-menu.component.html
@@ -3,6 +3,6 @@
   [filter]="true"
   selectionMode="checkbox"
   [(selection)]="selectedWorks"
-  (onNodeSelect)="onNodeSelect($event)"
-  (onNodeSelect)="onNodeUnselect($event)"
+  (onNodeSelect)="onNodeSelect()"
+  (onNodeUnselect)="onNodeUnselect()"
 ></p-tree>
