--- a/src/app/search/works-menu/works-menu.component.html
+++ b/src/app/search/works-menu/works-menu.component.html
@@ -2,7 +2,7 @@
   [value]="nodes"
   [filter]="true"
   selectionMode="checkbox"
-  [(selection)]="selectedWorks"
+  [(selection)]="selection"
   (onNodeSelect)="onNodeSelect()"
   (onNodeUnselect)="onNodeUnselect()"
 ></p-tree>
