--- a/src/styles.less
+++ b/src/styles.less
@@ -13,6 +13,10 @@ body {
   color: var(--surface-500);
 }
 
+.ks-highlight {
+  font-weight: 700;
+}
+
 .ks-h {
   font-size: 1.5rem;
   font-weight: 700;
