--- a/src/app/search/search/search.component.html
+++ b/src/app/search/search/search.component.html
@@ -31,6 +31,9 @@
   </div>
 
   <div class="col-7">
-    <app-results [results]="searchResults"></app-results>
+    <app-results
+      [results]="searchResults"
+      [searchTerms]="searchTerms.split(' ')"
+    ></app-results>
   </div>
 </div>
