fix: fix display of result count

--- a/src/app/search/search/search.component.html
+++ b/src/app/search/search/search.component.html
@@ -33,6 +33,7 @@
   <div class="col-7">
     <app-results
       [results]="searchResults"
+      [resultsCount]="resultsCount"
       [searchTerms]="searchTerms.split(' ')"
     ></app-results>
   </div>
