--- a/src/app/search/results/results.component.html
+++ b/src/app/search/results/results.component.html
@@ -1,4 +1,8 @@
 <ng-container *ngIf="results">
+  <p>{{ "SEARCH.RESULTS_COUNT" | translate }}: {{ resultsCount }}</p>
+</ng-container>
+
+<ng-container *ngIf="results">
   <ng-container *ngFor="let result of results">
     <ng-container *ngFor="let match of result.matches">
       <div class="mb-2">
