--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,6 @@
-<div class="mb-2">
-  <p-tabMenu [model]="items">
-    <ng-template pTemplate="item" let-item>
-      <i [ngClass]="item.icon"></i>
-      <div class="mt-2 ml-1">
-        {{ item.label | translate }}
-      </div>
-    </ng-template>
-  </p-tabMenu>
-</div>
+<app-navbar></app-navbar>
 
-<div class="mb-2">
-  <p-messages></p-messages>
-</div>
+<p-messages></p-messages>
+<div class="mb-2"></div>
 
 <router-outlet></router-outlet>
