feat: set max with for text display

--- a/src/app/read/container/text/text.component.html
+++ b/src/app/read/container/text/text.component.html
@@ -1,3 +1,7 @@
-<ng-container *ngIf="paragraphs">
-  <app-normal-mode [paragraphs]="paragraphs"></app-normal-mode>
-</ng-container>
+<div class="flex justify-content-center">
+  <div class="max-w-30rem">
+    <ng-container *ngIf="paragraphs">
+      <app-normal-mode [paragraphs]="paragraphs"></app-normal-mode>
+    </ng-container>
+  </div>
+</div>
