refactor: refactor search module

--- a/src/styles.less
+++ b/src/styles.less
@@ -8,6 +8,10 @@ body {
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+.max-w-600 {
+  max-width: 600px;
+}
+
 .ks-page-no-normal {
   font-size: 0.75rem;
   color: var(--surface-500);
