--- a/src/app/read/container/text/text.component.html
+++ b/src/app/read/container/text/text.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-center">
-  <div class="max-w-30rem">
+  <div class="max-w-600">
     <ng-container *ngIf="paragraphs">
       <app-normal-mode [paragraphs]="paragraphs"></app-normal-mode>
     </ng-container>
