--- a/src/app/search/presentational/result-list/result-list.component.html
+++ b/src/app/search/presentational/result-list/result-list.component.html
@@ -1,8 +1,17 @@
 <div class="flex justify-content-center">
   <div class="max-w-600">
     <ng-container *ngIf="results">
-      <div class="ks-h flex justify-content-center">
+      <div class="flex justify-content-center">
         {{ "SEARCH.RESULTS.COUNT" | translate }}: {{ resultsCount }}
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="!results">
+      <div class="flex justify-content-center">
+        {{
+          "SEARCH.RESULTS.NONE_FOUND"
+            | translate : { searchTerms: searchTerms.join(", ") }
+        }}
       </div>
     </ng-container>
 
