--- a/src/styles.less
+++ b/src/styles.less
@@ -8,6 +8,17 @@ body {
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+.p-card .p-card-body {
+  padding: 1;
+  padding-bottom: 1px;
+}
+.p-card .p-card-content {
+  padding: 0;
+}
+.p-card .p-card-footer {
+  padding: 0;
+}
+
 .max-w-600 {
   max-width: 600px;
 }
