--- a/src/app/search/presentational/result-list/result-list.component.html
+++ b/src/app/search/presentational/result-list/result-list.component.html
@@ -1,12 +1,12 @@
 <div class="flex justify-content-center">
   <div class="max-w-600">
-    <ng-container *ngIf="results">
+    <ng-container *ngIf="!isLoading && results">
       <div class="flex justify-content-center">
         {{ "SEARCH.RESULTS.COUNT" | translate }}: {{ resultsCount }}
       </div>
     </ng-container>
 
-    <ng-container *ngIf="!results">
+    <ng-container *ngIf="!isLoading && !results">
       <div class="flex justify-content-center">
         {{
           "SEARCH.RESULTS.NONE_FOUND"
