feat: add section to works trees

--- a/src/app/read/presentational/works-menu/works-menu.component.html
+++ b/src/app/read/presentational/works-menu/works-menu.component.html
@@ -3,4 +3,8 @@
   [filter]="true"
   selectionMode="single"
   (onNodeSelect)="onNodeSelect($event)"
-></p-tree>
+>
+  <ng-template pTemplate="default" let-node>
+    {{ node.label | translate }}
+  </ng-template>
+</p-tree>
