--- a/src/app/search/presentational/works-menu/works-menu.component.html
+++ b/src/app/search/presentational/works-menu/works-menu.component.html
@@ -1,8 +1,15 @@
-<p-tree
-  [value]="nodes"
-  [filter]="true"
-  selectionMode="checkbox"
-  [(selection)]="selection"
-  (onNodeSelect)="onNodeSelect()"
-  (onNodeUnselect)="onNodeUnselect()"
-></p-tree>
+<div class="w-full">
+  <p-tree
+    class="w-full"
+    [value]="nodes"
+    [filter]="true"
+    selectionMode="checkbox"
+    [(selection)]="selection"
+    (onNodeSelect)="onNodeSelect()"
+    (onNodeUnselect)="onNodeUnselect()"
+  >
+    <ng-template pTemplate="default" let-node>
+      {{ node.label | translate }}
+    </ng-template>
+  </p-tree>
+</div>
