--- a/src/app/search/presentational/search-input/search-input.component.html
+++ b/src/app/search/presentational/search-input/search-input.component.html
@@ -1,16 +1,15 @@
 <div class="flex justify-content-center">
-  <div class="max-w-600">
+  <div class="w-full max-w-600">
     <input
       pInputText
       type="text"
-      class="mb-2 w-full"
+      class="w-full mb-2"
       placeholder="{{ 'SEARCH.INPUT_PLACEHOLDER' | translate }}"
       (input)="onInputChange($event)"
     />
 
-    <div class="mb-2">
+    <div class="w-full mb-2">
       <app-works-menu
-        class="w-full"
         [works]="works"
         (onSelectionChange)="onSelectionChange($event)"
       ></app-works-menu>
