refactor: use common works-menu component

--- a/src/app/common/shared/works-menu/works-menu.component.html
+++ b/src/app/common/shared/works-menu/works-menu.component.html
@@ -3,8 +3,10 @@
     <p-tree
       [value]="nodes"
       [filter]="true"
-      selectionMode="single"
+      [selectionMode]="mode"
+      [(selection)]="selection"
       (onNodeSelect)="onNodeSelect($event)"
+      (onNodeUnselect)="onNodeUnselect()"
     >
       <ng-template pTemplate="default" let-node>
         {{ node.label | translate }}
