--- a/src/app/read/container/toc/toc.component.html
+++ b/src/app/read/container/toc/toc.component.html
@@ -1,4 +1,5 @@
 <app-works-menu
+  selectionMode="single"
   [works]="works"
-  (onSelection)="showText($event)"
+  (onSelectionChange)="showText($event)"
 ></app-works-menu>
