--- a/src/app/search/presentational/search-input/search-input.component.html
+++ b/src/app/search/presentational/search-input/search-input.component.html
@@ -10,6 +10,7 @@
 
     <div class="mb-2">
       <app-works-menu
+        selectionMode="checkbox"
         [works]="works"
         (onSelectionChange)="onSelectionChange($event)"
       ></app-works-menu>
