refactor: highlight search terms in backend

--- a/src/app/search/presentational/result-item/result-item.component.html
+++ b/src/app/search/presentational/result-item/result-item.component.html
@@ -11,9 +11,5 @@
     </div>
   </ng-template>
 
-  <p
-    [innerHTML]="
-      match.snippet | highlightSearchTerms : searchTerms | pagenumberNormalMode
-    "
-  ></p>
+  <p [innerHTML]="match.snippet | pagenumberNormalMode"></p>
 </p-card>
