--- a/src/app/search/presentational/result-list/result-list.component.html
+++ b/src/app/search/presentational/result-list/result-list.component.html
@@ -29,6 +29,7 @@
               [result]="result"
               [match]="match"
               [searchTerms]="searchTerms"
+              (onClick)="onMatchClick($event)"
             ></app-result-item>
           </div>
         </ng-container>
