feat: start search when pressing enter on input

--- a/src/app/search/presentational/search-input/search-input.component.html
+++ b/src/app/search/presentational/search-input/search-input.component.html
@@ -6,6 +6,7 @@
       class="w-full mb-2"
       placeholder="{{ 'SEARCH.INPUT_PLACEHOLDER' | translate }}"
       (input)="onInputChange($event)"
+      (keydown.enter)="onSearchClick()"
     />
 
     <div class="mb-2">
