--- a/src/app/read/container/toc/toc.component.html
+++ b/src/app/read/container/toc/toc.component.html
@@ -1,5 +1,5 @@
 <app-works-menu
   selectionMode="single"
-  [works]="works"
+  [works]="works | async"
   (onSelectionChange)="showText($event)"
 ></app-works-menu>
