refactor: rework works-menu component to use store

--- a/src/app/read/container/toc/toc.component.html
+++ b/src/app/read/container/toc/toc.component.html
@@ -1,5 +1,4 @@
 <app-works-menu
-  selectionMode="single"
-  [works]="works$ | async"
+  [isSelectable]="true"
   (onSelectionChange)="showText($event)"
 ></app-works-menu>
