--- a/src/app/search/presentational/search-input/search-input.component.html
+++ b/src/app/search/presentational/search-input/search-input.component.html
@@ -11,8 +11,7 @@
 
     <div class="mb-2">
       <app-works-menu
-        selectionMode="checkbox"
-        [works]="works"
+        [isSelectable]="true"
         (onSelectionChange)="onSelectionChange($event)"
       ></app-works-menu>
     </div>
