refactor: use empty array as default values

--- a/src/app/common/shared/works-menu/works-menu.component.html
+++ b/src/app/common/shared/works-menu/works-menu.component.html
@@ -1,7 +1,7 @@
 <div class="flex justify-content-center">
   <div class="max-w-600">
     <p-tree
-      [value]="(nodes | async) || []"
+      [value]="(nodes$ | async) || []"
       [filter]="true"
       [selectionMode]="mode"
       [(selection)]="selection"
