--- a/src/app/search/presentational/result-list/result-list.component.html
+++ b/src/app/search/presentational/result-list/result-list.component.html
@@ -1,35 +1,36 @@
 <div class="flex justify-content-center">
   <div class="max-w-600">
-    <ng-container *ngIf="!isLoading && results">
+    <ng-container *ngIf="result">
       <div class="flex justify-content-center">
-        {{ "SEARCH.RESULTS.COUNT" | translate }}: {{ resultsCount }}
+        {{ "SEARCH.result.COUNT" | translate }}: {{ resultCount }}
       </div>
     </ng-container>
 
-    <ng-container *ngIf="!isLoading && !results">
+    <ng-container *ngIf="!result">
       <div class="flex justify-content-center">
         {{
-          "SEARCH.RESULTS.NONE_FOUND"
+          "SEARCH.result.NONE_FOUND"
             | translate : { searchTerms: searchTerms.join(", ") }
         }}
       </div>
     </ng-container>
 
-    <ng-container *ngIf="results">
-      <ng-container *ngFor="let result of results">
+    <ng-container *ngIf="result">
+      <ng-container *ngFor="let result of result">
         <div class="mt-6">
           <p-divider align="center">
-            <b>Band {{ result.volume }}: {{ result.workTitle }}</b>
+            <b>Band {{ result.volumeId }}: {{ result }}</b>
           </p-divider>
         </div>
 
         <ng-container *ngFor="let match of result.matches">
           <div class="mb-2">
             <app-result-item
-              [result]="result"
-              [match]="match"
-              [searchTerms]="searchTerms"
-              (onClick)="onMatchClick($event)"
+              [volume]="getVolume(result.workId)"
+              [workTitle]="getWorkTitle(result.workId)"
+              [pages]="match.pages"
+              [snippet]="match.snippet"
+              (onClick)="onMatchClick(match)"
             ></app-result-item>
           </div>
         </ng-container>
