refactor: use store for search input

--- a/src/app/search/container/search/search.component.html
+++ b/src/app/search/container/search/search.component.html
@@ -1,6 +1,6 @@
 <app-search-input
-  [works]="works"
-  [isSearchPermitted]="isSearchPermitted"
+  [works]="(works$ | async) || []"
+  [isSearchPermitted]="(isSearchPermitted$ | async) || false"
   (onInput)="onInput($event)"
   (onSelect)="onSelect($event)"
   (onSearch)="onSearch()"
