test: add tests for normal mode pipe

--- a/src/styles.less
+++ b/src/styles.less
@@ -23,7 +23,7 @@ body {
   max-width: 600px;
 }
 
-.ks-page-no-normal {
+.ks-pagenr-normal {
   font-size: 0.75rem;
   color: var(--surface-500);
 }
