test: fix tests

--- a/src/app/search/presentational/result-list/result-list.component.html
+++ b/src/app/search/presentational/result-list/result-list.component.html
@@ -19,7 +19,7 @@
       <ng-container *ngFor="let result of result">
         <div class="mt-6">
           <p-divider align="center">
-            <b>Band {{ result.volumeId }}: {{ result }}</b>
+            <b>Band {{ getVolume(result.workId) }}: {{ result }}</b>
           </p-divider>
         </div>
 
