refactor: various adjustments in works-menu

--- a/src/app/search/presentational/search-input/search-input.component.html
+++ b/src/app/search/presentational/search-input/search-input.component.html
@@ -11,7 +11,7 @@
 
     <div class="mb-2">
       <app-works-menu
-        [isSelectable]="true"
+        [useCheckbox]="true"
         (onSelectionChange)="onSelectionChange($event)"
       ></app-works-menu>
     </div>
