--- a/src/app/admin/upload/upload.component.html
+++ b/src/app/admin/upload/upload.component.html
@@ -2,41 +2,13 @@
   <p-progressSpinner></p-progressSpinner>
 </p-blockUI>
 
-<div class="flex flex-column">
-  <div class="flex justify-content-center">
-    <div class="p-inputgroup mb-2 max-w-max">
-      <span class="p-inputgroup-addon">{{ "UPLOAD.TITLE" | translate }}</span>
-      <input pInputText required [(ngModel)]="title" />
-    </div>
-  </div>
+<div class="flex justify-content-center">
+  <app-works-menu
+    [useCheckbox]="false"
+    (onSelectionChange)="setWorkId($event)"
+  ></app-works-menu>
 
-  <div class="flex justify-content-center">
-    <div class="p-inputgroup mb-2 max-w-max">
-      <span class="p-inputgroup-addon">{{ "UPLOAD.ABBREV" | translate }}</span>
-      <input pInputText required [(ngModel)]="abbrev" />
-    </div>
-  </div>
-
-  <div class="flex justify-content-center">
-    <div class="p-inputgroup mb-2 max-w-max">
-      <span class="p-inputgroup-addon">{{ "UPLOAD.VOLUME" | translate }}</span>
-      <input pInputText required [(ngModel)]="volume" />
-    </div>
-  </div>
-
-  <div class="flex justify-content-center">
-    <div class="p-inputgroup mb-2 max-w-max">
-      <span class="p-inputgroup-addon">{{ "UPLOAD.ORDINAL" | translate }}</span>
-      <input pInputText required [(ngModel)]="ordinal" />
-    </div>
-  </div>
-
-  <div class="flex justify-content-center">
-    <div class="p-inputgroup mb-2 max-w-max">
-      <span class="p-inputgroup-addon">{{ "UPLOAD.YEAR" | translate }}</span>
-      <input pInputText required [(ngModel)]="year" />
-    </div>
-  </div>
+  <div class="mr-2"></div>
 
   <div class="flex justify-content-center">
     <p-fileUpload
@@ -46,10 +18,8 @@
       mode="basic"
       [customUpload]="true"
       (uploadHandler)="onUpload($event, fileUploadBtn)"
-      [disabled]="!title || !volume || !ordinal"
-      pTooltip="{{
-        !title || !volume || !ordinal ? ('UPLOAD.TOOLTIP' | translate) : ''
-      }}"
+      [disabled]="workId < 1"
+      pTooltip="{{ workId < 1 ? ('UPLOAD.TOOLTIP' | translate) : '' }}"
     ></p-fileUpload>
   </div>
 </div>
