feat: add button to navigate to full text

--- a/src/app/read/presentational/normal-mode/normal-mode.component.html
+++ b/src/app/read/presentational/normal-mode/normal-mode.component.html
@@ -1,4 +1,6 @@
 <ng-container *ngFor="let paragraph of paragraphs">
+  <div id="paragraph-{{ paragraph.id }}"></div>
+
   <p
     style="
       text-align: justify;
