--- a/src/app/search/container/results/results.component.html
+++ b/src/app/search/container/results/results.component.html
@@ -10,6 +10,8 @@
 
 <app-paragraph-dialog
   [(isVisible)]="showParagraph"
+  [workId]="workId"
+  [paragraphId]="paragraphId"
   [text]="text"
   [pages]="pages"
 ></app-paragraph-dialog>
