refactor: shorten name of normal mode pipe

--- a/src/app/read/presentational/normal-mode/normal-mode.component.html
+++ b/src/app/read/presentational/normal-mode/normal-mode.component.html
@@ -9,6 +9,6 @@
       hyphens: auto;
     "
     lang="de-de"
-    [innerHTML]="paragraph.text | pagenumberNormalMode"
+    [innerHTML]="paragraph.text | normalMode"
   ></p>
 </ng-container>
