--- a/src/app/search/presentational/result-item/result-item.component.html
+++ b/src/app/search/presentational/result-item/result-item.component.html
@@ -10,6 +10,6 @@
       </div>
     </ng-template>
 
-    <p [innerHTML]="snippet | pagenumberNormalMode"></p>
+    <p [innerHTML]="snippet | normalMode"></p>
   </p-card>
 </div>
