feat: add styles for original mode

--- a/src/styles.less
+++ b/src/styles.less
@@ -23,8 +23,16 @@ body {
   max-width: 600px;
 }
 
-.ks-pagenr-normal {
+.max-w-680 {
+  max-width: 680px;
+}
+
+.ks-pagination-s {
   font-size: 0.75rem;
+  color: var(--surface-500);
+}
+
+.ks-pagination-m {
   color: var(--surface-500);
 }
 
