--- a/src/app/read/container/text/text.component.html
+++ b/src/app/read/container/text/text.component.html
@@ -1,9 +1,34 @@
-<div class="flex justify-content-center">
-  <div class="max-w-600">
-    <ng-container *ngIf="isLoaded$ | async">
-      <app-normal-mode
-        [paragraphs]="(paragraphs$ | async) || []"
-      ></app-normal-mode>
+<ng-container *ngIf="isLoaded$ | async">
+  <div class="flex justify-content-center">
+    <div class="max-w-600">
+      <p-checkbox
+        id="mode-checkbox"
+        class="mr-2"
+        [(ngModel)]="isOriginalMode"
+        [binary]="true"
+      ></p-checkbox>
+
+      <label for="mode-checkbox">{{
+        "READ.MODE_CHECKBOX_LABEL" | translate
+      }}</label>
+    </div>
+  </div>
+
+  <div class="flex justify-content-center">
+    <ng-container *ngIf="!isOriginalMode">
+      <div class="max-w-600">
+        <app-normal-mode
+          [paragraphs]="(paragraphs$ | async) || []"
+        ></app-normal-mode>
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="isOriginalMode">
+      <div class="max-w-680">
+        <app-original-mode
+          [paragraphs]="(paragraphs$ | async) || []"
+        ></app-original-mode>
+      </div>
     </ng-container>
   </div>
-</div>
+</ng-container>
