fix: adjust code for api package 0.11.2 update

--- a/src/app/search/container/results/results.component.html
+++ b/src/app/search/container/results/results.component.html
@@ -10,7 +10,5 @@
 <app-paragraph-dialog
   [(isVisible)]="showParagraph"
   [workId]="workId"
-  [paragraphId]="paragraphId"
-  [text]="text"
-  [pages]="pages"
+  [match]="match"
 ></app-paragraph-dialog>
