--- a/src/app/search/presentational/result-list/result-list.component.html
+++ b/src/app/search/presentational/result-list/result-list.component.html
@@ -16,17 +16,14 @@
       <ng-container *ngFor="let result of result">
         <div class="mt-6">
           <p-divider align="center">
-            <b
-              >Band {{ getVolume(result.workId) }}:
-              {{ getWorkTitle(result.workId) }}</b
-            >
+            <b>{{ getWorkTitle(result.workId) }}</b
+            >b
           </p-divider>
         </div>
 
         <ng-container *ngFor="let match of result.matches">
           <div class="mb-2">
             <app-result-item
-              [volume]="getVolume(result.workId)"
               [workTitle]="getWorkTitle(result.workId)"
               [match]="match"
               (onClick)="onMatchClick(result.workId, match)"
